--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,79 @@
-.popup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fefefe;
-    padding: 20px;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+html, body {
+	margin: 0;	
+	padding: 0;
 }
 
-.popup-content {
-    text-align: center;
+body {
+	background: #171717;
+	color: #999;
+	font: 100%/18px helvetica, arial, sans-serif;
 }
 
-.close {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 20px;
+a {
+	color: #2fa1d6;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #fff;	
+}
+
+#canvas-container {
+	background: #000 url(https://jackrugile.com/lab/fireworks-v2/images/bg.jpg);
+  height: 400px;
+	left: 50%;
+	margin: -200px 0 0 -300px;
+	position: absolute;
+	top: 50%;
+  width: 600px;
+	z-index: 2;
+}
+		
+canvas {
+	cursor: crosshair;
+	display: block;
+	position: relative;
+	z-index: 3;
+}
+
+canvas:active {
+	cursor: crosshair;
+}
+
+#skyline {
+	background: url(https://jackrugile.com/lab/fireworks-v2/images/skyline.png) repeat-x 50% 0;
+	bottom: 0;
+	height: 135px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 1;	
+}
+
+#mountains1 {
+	background: url(https://jackrugile.com/lab/fireworks-v2/images/mountains1.png) repeat-x 40% 0;
+	bottom: 0;
+	height: 200px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 1;	
+}
+
+#mountains2 {
+	background: url(https://jackrugile.com/lab/fireworks-v2/images/mountains2.png) repeat-x 30% 0;
+	bottom: 0;
+	height: 250px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 1;	
+}
+
+#gui {
+	right: 0;
+	position: fixed;
+	top: 0;
+	z-index: 3;
 }
